Removed libraries dependencies to external jars, added dependencies on the pom.xml, adding new test cases examples for Apps&LinksPages

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -5,8 +5,12 @@ northeasternn.edu.signinpage.txtbox_UserName = .//input[@id='username']
 northeasternn.edu.signinpage.txtbox_Password = .//input[@id='password']
 northeasternn.edu.signinpage.btn_Login = .//input[@type='submit']
 northeastern.edu.signinpage.sigin_link = .//a[contains(text(),'Sign In')]
-##Home Page Elements
 
+##Home Page Elements
 #referenced by xpath
-northeastern.edu.homepage.appsandlinkslink= .//span[contains(text(),'Apps & Links')]/..
- 
+northeastern.edu.homepage.appsandlinkslink= .//div[@class='nav-content']/ul/li/a/span[contains(text(),'Apps & Links')]/..
+
+##AppsAndLinks Page Elements
+#referenced by xpath
+northeastern.edu.appsandlinkspage.recentlinkslistdiv= .//div[@class='my-recent-links-widget']/div
+northeastern.edu.appsandlinkspage.quicklinkslistdiv= .//div[@class='my-quick-links-widget']/div
