--- a/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
@@ -2,15 +2,19 @@
 #BaseUrl for execution
 northeastern.edu_baseUrl = https://dev-lr.northeastern.edu/
 northeastern.edu_homepageurl = https://dev-lr.northeastern.edu/group/guest
+northeastern.edu_appsandlinkspageurl = https://dev-lr.northeastern.edu/group/guest/apps-links
 
 ##Web browser for execution##
 #values = PhantomJS,Chrome,FireFox,Safari,IE
 webBrowser = Chrome
 #ChromeDriverPlugin location
 chromeExec = WebDriversPlugins/chromedriver
+#PhatomJSDriverPlugin location
 phantomjsExec = WebDriversPlugins/phantomjs
-#Default web driver wait
-defaultWaitTime = 5000
+
+#Default web driver wait time in miliseconds
+defaultShortWaitTime = 2000
+defaultLongWaitTime = 5000
 
 ##DataSource Manager##
 #TestUsers DataSheetName
