New automated tcs at 14/06
see jira automated tcs and estimation doc

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -12,5 +12,22 @@ northeastern.edu.homepage.appsandlinkslink= .//div[@class='nav-content']/ul/li/a
 
 ##AppsAndLinks Page Elements
 #referenced by xpath
-northeastern.edu.appsandlinkspage.recentlinkslistdiv= .//div[@class='my-recent-links-widget']/div
-northeastern.edu.appsandlinkspage.quicklinkslistdiv= .//div[@class='my-quick-links-widget']/div
+northeastern.edu.appsandlinkspage.recentlinkslistul= .//*[@id='right-panel']/div/div/*[@class='portlet']/div/div/div/div[@class='my-recent-links']/div/div/ul
+northeastern.edu.appsandlinkspage.quicklinkslistul= .//div[@class='my-links-widget']/div[@class='list']/ul
+northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-links-widget']/div/ul/li
+northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/li
+northeastern.edu.appsandlinkspage.appsdivslist= .//div[@class='app']
+northeastern.edu.appsandlinkspage.appsportletlistcontainer= .//div[contains(@class,'apps-list')]
+northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//div[@id='Human_Resources']/../a
+northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslistcontainer=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslistcontainer =.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.seeallothersonbenefits= .//div[@id='Benefits']/../a
+northeastern.edu.appsandlinkspage.mostrelevanbenefitslistcontainer=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanbenefitslinks=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslistcontainer =.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslinks=.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+
+
+
