Adding new test cases NUCP-173 and NUCP-174

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -18,16 +18,27 @@ northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-link
 northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/li
 northeastern.edu.appsandlinkspage.appsdivslist= .//div[@class='app']
 northeastern.edu.appsandlinkspage.appsportletlistcontainer= .//div[contains(@class,'apps-list')]
+
+#human resources
 northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//div[@id='Human_Resources']/../a
 northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslistcontainer=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']
 northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
 northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslistcontainer =.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']
 northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+
+#benefits
 northeastern.edu.appsandlinkspage.seeallothersonbenefits= .//div[@id='Benefits']/../a
 northeastern.edu.appsandlinkspage.mostrelevanbenefitslistcontainer=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']
 northeastern.edu.appsandlinkspage.mostrelevanbenefitslinks=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
 northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslistcontainer =.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']
 northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslinks=.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+
+#library
+northeastern.edu.appsandlinkspage.seeallothersonlibrary= .//div[@id='Library']/../a
+northeastern.edu.appsandlinkspage.mostrelevanlibrarylistcontainer=.//div[@id='Library']/../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanlibrarylinks=.//div[@id='Library']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategorieslibrarylistcontainer =.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategorieslibrarylinks=.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
 
 
