academic resources test cases

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -40,5 +40,12 @@ northeastern.edu.appsandlinkspage.mostrelevanlibrarylinks=.//div[@id='Library']/
 northeastern.edu.appsandlinkspage.relatedCategorieslibrarylistcontainer =.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']
 northeastern.edu.appsandlinkspage.relatedCategorieslibrarylinks=.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
+#academic resources
+northeastern.edu.appsandlinkspage.seeallothersonacademicresources= .//div[@id='Academic_Resources']/../a
+northeastern.edu.appsandlinkspage.mostrelevanacademicresourceslistcontainer=.//div[@id='Academic_Resources']/../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanacademicresourceslinks=.//div[@id='Academic_Resources']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategoriesacademicresourceslistcontainer =.//div[@id='Academic_Resources']/../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategoriesacademicresourceslinks=.//div[@id='Academic_Resources']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+
 
 
