Adding footer test cases and landing page test cases to automation

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -10,6 +10,14 @@ northeastern.edu.signinpage.sigin_link = .//a[contains(text(),'Sign In')]
 #referenced by xpath
 northeastern.edu.homepage.appsandlinkslink= .//div[@class='nav-content']/ul/li/a/span[contains(text(),'Apps & Links')]/..
 
+#footer
+northeastern.edu.homepage.footer.appsandlinkslink=.//div[@id='footer']/ul/li/a[contains(text(),'Apps & Links')]
+northeastern.edu.homepage.footer.homelink=.//div[@id='footer']/ul/li/a[contains(text(),'Home')]
+northeastern.edu.homepage.footer.humanresourceslink= .//div[@id='footer']/ul/li/a[contains(text(),'Human Resources')]
+northeastern.edu.homepage.footer.directorylink=.//div[@id='footer']/ul/li/a[contains(text(),'Directory')]
+northeastern.edu.homepage.footer.comunitylink=.//div[@id='footer']/ul/li/a[contains(text(),'Community')]
+northeastern.edu.homepage.footer.copyright= .//div[@id='footer']/p[@class='copyright']
+
 ##AppsAndLinks Page Elements
 #referenced by xpath
 northeastern.edu.appsandlinkspage.recentlinkslistul= .//*[@id='right-panel']/div/div/*[@class='portlet']/div/div/div/div[@class='my-recent-links']/div/div/ul
@@ -47,5 +55,8 @@ northeastern.edu.appsandlinkspage.mostrelevanacademicresourceslinks=.//div[@id='
 northeastern.edu.appsandlinkspage.relatedCategoriesacademicresourceslistcontainer =.//div[@id='Academic_Resources']/../div[@class='related-categories']/div[@class='list']
 northeastern.edu.appsandlinkspage.relatedCategoriesacademicresourceslinks=.//div[@id='Academic_Resources']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
+#hero
+northeastern.edu.appsandlinkspage.herotitle=.//h1[contains(text(),'Apps & Links')]
+northeastern.edu.appsandlinkspage.herotext=.//h1[contains(text(),'Apps & Links')]/../p
 
 
