Adding test case NUCP-74 and NUCP-142

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -17,6 +17,11 @@ northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-link
 northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/li
 northeastern.edu.appsandlinkspage.appsdivslist= .//div[@class='app']
 northeastern.edu.appsandlinkspage.appsportletlistcontainer= .//div[contains(@class,'apps-list')]
+northeastern.edu.appsandlinkspage..profilemanagementcontainer= .//div[@class='profile-management']
+northeastern.edu.appsandlinkspage..profilemanagementLink = .//div[@class='profile-management']/div/div/a[contains(@class,'change-logo')]
+northeastern.edu.appsandlinkspage..profilemanagementpopuptitle=.//div[@id='_com_neu_portlet_NeuProfileManagementPortlet_changeLogo']/div/div[contains(@class,'modal-header')]/h3
+northeastern.edu.appsandlinkspage..profilemanagementpopupclosebutton=.//div[@id='_com_neu_portlet_NeuProfileManagementPortlet_changeLogo']/div/div[contains(@class,'modal-header')]/div/button
+northeastern.edu.appsandlinkspage..profilemanagementpopupcontainer= .//div[@id='_com_neu_portlet_NeuProfileManagementPortlet_changeLogo']
 
 #human resources
 northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//div[@id='Human_Resources']/../a
@@ -62,6 +67,8 @@ northeastern.edu.dashboardpage.addtomyapps.modalxbutton = .//h1[contains(text(),
 #Latest News
 northeastern.edu.dashboardpage.latestnewsportlet = .//div[@class='news cards-container']
 northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//div[@class='news cards-container']/div[contains(@class,'ft')]/a[contains(text(),'View News Page')]
+northeastern.edu.dashboardpage.latestnewsdivlistitems=.//div[@class='news cards-container']/div[@class='container-body']/div
+northeastern.edu.dashboardpage.latestnewsdivcontainer=.//div[@class='news cards-container']/div[@class='container-body']
 
 #footer
 northeastern.edu.homepage.footer.appsandlinkslink=.//div[@id='footer']/ul/li/a[contains(text(),'Apps & Links')]
