--- a/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
@@ -11,6 +11,10 @@ webBrowser = Chrome
 chromeExec = WebDriversPlugins/chromedriver
 #PhatomJSDriverPlugin location
 phantomjsExec = WebDriversPlugins/phantomjs
+#IEDriverPlugin location
+IEexec32= WebDriversPlugins/IEDriverServer32.exe
+IEexec64= WebDriversPlugins/IEDriverServer64.exe
+BitsVersionForIE=32
 
 #Default web driver wait time in miliseconds
 defaultShortWaitTime = 2000
