Managing Drivers for Win and Mac Envs

--- a/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
@@ -5,16 +5,27 @@ northeastern.edu_homepageurl = https://dev-lr.northeastern.edu/group/guest
 northeastern.edu_appsandlinkspageurl = https://dev-lr.northeastern.edu/group/guest/apps-links
 
 ##Web browser for execution##
+environmentToExecuteAutomation=MAC
 #values = PhantomJS,Chrome,FireFox,Safari,IE
 webBrowser = Chrome
+
+##WebDriverPlugins for Mac
 #ChromeDriverPlugin location
 chromeExec = WebDriversPlugins/chromedriver
 #PhatomJSDriverPlugin location
 phantomjsExec = WebDriversPlugins/phantomjs
+
+##WebDriverPlugins for Mac
+#ChromeDriverPlugin location
+chromeExec = WebDriversPlugins/chromedriver.exe
+#PhatomJSDriverPlugin location
+phantomjsExecWin = WebDriversPlugins/phantomjs.exe
+
 #IEDriverPlugin location
-IEexec32= WebDriversPlugins/IEDriverServer32.exe
-IEexec64= WebDriversPlugins/IEDriverServer64.exe
-BitsVersionForIE=32
+iEexec32= WebDriversPlugins/IEDriverServer32.exe
+iEexec64= WebDriversPlugins/IEDriverServer64.exe
+
+bitsVersionForIE=32
 
 #Default web driver wait time in miliseconds
 defaultShortWaitTime = 2000
