Changed broken xpath on apps&links pages, changed the base urls settings (properties) and the user index to be used

--- a/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
@@ -1,8 +1,8 @@
 ##Project Constants##
 #BaseUrl for execution
 northeastern.edu_baseUrl = https://dev-lr.northeastern.edu/
-northeastern.edu_homepageurl = https://dev-lr.northeastern.edu/group/guest
-northeastern.edu_appsandlinkspageurl = https://dev-lr.northeastern.edu/group/guest/apps-links
+northeastern.edu_homepageurl = https://dev-lr.northeastern.edu/group/myneu-portal
+northeastern.edu_appsandlinkspageurl = https://dev-lr.northeastern.edu/group/myneu-portal/apps-links
 
 ##Web browser for execution##
 #values = MAC,Win
@@ -37,7 +37,7 @@ defaultLongWaitTime = 4000
 dataSheetNameTestUsers = TestUsers
 #TestUsers DataRowIndex to use
 #In some cases this will change depending that the account to test
-dataRowIndexTestUser = 2
+dataRowIndexTestUser = 3
 #TestUsers userNameIndex to use
 userNameIndex = 0
 #TestUsers passwordIndex to use
