--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -11,10 +11,10 @@ northeastern.edu.signinpage.sigin_link = .//a[contains(text(),'Sign In')]
 northeastern.edu.homepage.appsandlinkslink= .//div[@class='nav-content']/ul/li/a/span[contains(text(),'Apps & Links')]/..
 
 #Right Panel
-northeastern.edu.appsandlinkspage.recentlinkslistul= .//*[@id='right-panel']/div/div/*[@class='portlet']/div/div/div/div[@class='my-recent-links']/div/div/ul
+northeastern.edu.appsandlinkspage.recentlinkslistul= .//div[@class='my-recent-links-widget']/div[@class='list']/ul
 northeastern.edu.appsandlinkspage.quicklinkslistul= .//div[@class='my-links-widget']/div[@class='list']/ul
-northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-links-widget']/div/ul/li
-northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/li
+northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-links-widget']/div/ul/div[@class='links-row']/li
+northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/div[@class='links-row']/li
 northeastern.edu.appsandlinkspage.profilemanagementcontainer= .//div[@class='profile-management']
 northeastern.edu.appsandlinkspage.profilemanagementLink = .//div[@class='profile-management']/div/div/a[contains(@class,'change-logo')]
 northeastern.edu.appsandlinkspage.profilemanagementpopuptitle=.//div[@id='_com_neu_portlet_NeuProfileManagementPortlet_changeLogo']/div/div[contains(@class,'modal-header')]/h3
@@ -31,25 +31,25 @@ northeastern.edu.appsandlinkspage.appssearchresultslist= .//div[@id='app-search-
 northeastern.edu.appsandlinkspage.appssearchresultsclosebutton= .//div[@id='app-search-list']/i
 
 #human resources
-northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//div[@id='Human_Resources']/../a
-northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslistcontainer=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']
-northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
-northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslistcontainer =.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']
-northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslinks=.//div[@id='Human_Resources']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//h1[@id='Human_Resources']/../a
+northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslistcontainer=.//h1[@id='Human_Resources']/../../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanhumanresourceslinks=.//h1[@id='Human_Resources']/../../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslistcontainer =.//h1[@id='Human_Resources']/../../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategorieshumanresourceslinks=.//h1[@id='Human_Resources']/../../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
 #benefits
-northeastern.edu.appsandlinkspage.seeallothersonbenefits= .//div[@id='Benefits']/../a
-northeastern.edu.appsandlinkspage.mostrelevanbenefitslistcontainer=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']
-northeastern.edu.appsandlinkspage.mostrelevanbenefitslinks=.//div[@id='Benefits']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
-northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslistcontainer =.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']
-northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslinks=.//div[@id='Benefits']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.seeallothersonbenefits= .//h1[@id='Benefits']/../a
+northeastern.edu.appsandlinkspage.mostrelevanbenefitslistcontainer=.//h1[@id='Benefits']/../../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanbenefitslinks=.//h1[@id='Benefits']/../../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslistcontainer =.//h1[@id='Benefits']/../../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategoriesbenefitslinks=.//h1[@id='Benefits']/../../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
 #library
-northeastern.edu.appsandlinkspage.seeallothersonlibrary= .//div[@id='Library']/../a
-northeastern.edu.appsandlinkspage.mostrelevanlibrarylistcontainer=.//div[@id='Library']/../div[@class='most-revelant']/div[@class='list']
-northeastern.edu.appsandlinkspage.mostrelevanlibrarylinks=.//div[@id='Library']/../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
-northeastern.edu.appsandlinkspage.relatedCategorieslibrarylistcontainer =.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']
-northeastern.edu.appsandlinkspage.relatedCategorieslibrarylinks=.//div[@id='Library']/../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.seeallothersonlibrary= .//h1[@id='Library']/../a
+northeastern.edu.appsandlinkspage.mostrelevanlibrarylistcontainer=.//h1[@id='Library']/../../div[@class='most-revelant']/div[@class='list']
+northeastern.edu.appsandlinkspage.mostrelevanlibrarylinks=.//h1[@id='Library']/../../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']
+northeastern.edu.appsandlinkspage.relatedCategorieslibrarylistcontainer =.//h1[@id='Library']/../../div[@class='related-categories']/div[@class='list']
+northeastern.edu.appsandlinkspage.relatedCategorieslibrarylinks=.//h1[@id='Library']/../../div[@class='related-categories']/div[@class='list']/div[@class='item-link']
 
 #academic resources
 northeastern.edu.appsandlinkspage.seeallothersonacademicresources= .//h1[@id='Academic_Resources']/../a
@@ -74,9 +74,9 @@ northeastern.edu.dashboardpage.addtomyapps.modalxbutton = .//h1[contains(text(),
 
 #Latest News
 northeastern.edu.dashboardpage.latestnewsportlet = .//div[@class='news cards-container']
-northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//div[@class='news cards-container']/div[contains(@class,'ft')]/a[contains(text(),'View News Page')]
-northeastern.edu.dashboardpage.latestnewsdivlistitems=.//div[@class='news cards-container']/div[@class='container-body']/div
-northeastern.edu.dashboardpage.latestnewsdivcontainer=.//div[@class='news cards-container']/div[@class='container-body']
+northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
+northeastern.edu.dashboardpage.latestnewsdivlistitems=.//div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
+northeastern.edu.dashboardpage.latestnewsdivcontainer=.//div[@class='news cards-container']/div[contains(@class,'news-body')]
 
 #footer
 northeastern.edu.homepage.footer.appsandlinkslink=.//div[@id='footer']/ul/li/a[contains(text(),'Apps & Links')]
