Changed double match xpaths for LatestEvents test cases, also automated NUCP-81 AND NUCP-82

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -73,10 +73,16 @@ northeastern.edu.dashboardpage.addtomyapps.modaltitle = .//h1[contains(text(),'A
 northeastern.edu.dashboardpage.addtomyapps.modalxbutton = .//h1[contains(text(),'Add to My Apps')]/../i[contains(@class,'close')]
 
 #Latest News
-northeastern.edu.dashboardpage.latestnewsportlet = .//div[@class='news cards-container']
-northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
-northeastern.edu.dashboardpage.latestnewsdivlistitems=.//div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
-northeastern.edu.dashboardpage.latestnewsdivcontainer=.//div[@class='news cards-container']/div[contains(@class,'news-body')]
+northeastern.edu.dashboardpage.latestnewsportlet = .//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']
+northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
+northeastern.edu.dashboardpage.latestnewsdivlistitems=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
+northeastern.edu.dashboardpage.latestnewsdivcontainer=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]
+
+#Latest Events
+northeastern.edu.dashboardpage.latesteventsportlet = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']
+northeastern.edu.dashboardpage.latestevents.vewAllEventsLink = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
+northeastern.edu.dashboardpage.latesteventsdivlistitems= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
+northeastern.edu.dashboardpage.latesteventsdivcontainer= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]
 
 #footer
 northeastern.edu.homepage.footer.appsandlinkslink=.//div[@id='footer']/ul/li/a[contains(text(),'Apps & Links')]
