Fix some xpath and logic issues with test cases classes

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -28,7 +28,7 @@ northeastern.edu.appsandlinkspage.appssearchportletcontainer= .//div[@id='app-se
 northeastern.edu.appsandlinkspage.appssearchbox= .//div[@id='app-search-list']/input[@type='text']
 northeastern.edu.appsandlinkspage.appssearchresultslistcontainer= .//div[@id='app-search-list']/div/div[@class='list']
 northeastern.edu.appsandlinkspage.appssearchresultslist= .//div[@id='app-search-list']/div/div[@class='list']/div
-northeastern.edu.appsandlinkspage.appssearchresultsclosebutton= .//div[@id='app-search-list']/i
+northeastern.edu.appsandlinkspage.appssearchresultsclosebutton= .//div[@id='app-search-list']/a
 
 #human resources
 northeastern.edu.appsandlinkspage.seeallothersonhumanresources= .//h1[@id='Human_Resources']/../a
@@ -60,8 +60,8 @@ northeastern.edu.appsandlinkspage.relatedCategoriesacademicresourceslinks=.//h1[
 northeastern.edu.appsandlinkspage.infotooltipacademicresourcesicons= //h1[@id='Academic_Resources']/../../div[@class='most-revelant']/div[@class='list']/div[@class='item-link']/i
 
 #hero
-northeastern.edu.appsandlinkspage.herotitle=.//h1[contains(text(),'Apps & Links')]
-northeastern.edu.appsandlinkspage.herotext=.//h1[contains(text(),'Apps & Links')]/../p
+northeastern.edu.appsandlinkspage.herotitle=.//h1[@class='section-title']
+northeastern.edu.appsandlinkspage.herotext=.//h1[@class='section-title']/../p
 
 ##Home Page Elements##
 #referenced by xpath
@@ -80,9 +80,9 @@ northeastern.edu.dashboardpage.latestnewsdivcontainer=.//h1[contains(text(),'Lat
 
 #Latest Events
 northeastern.edu.dashboardpage.latesteventsportlet = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']
-northeastern.edu.dashboardpage.latestevents.vewAllEventsLink = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
-northeastern.edu.dashboardpage.latesteventsdivlistitems= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
-northeastern.edu.dashboardpage.latesteventsdivcontainer= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]
+northeastern.edu.dashboardpage.latestevents.vewAllEventsLink = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
+northeastern.edu.dashboardpage.latesteventsdivlistitems= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
+northeastern.edu.dashboardpage.latesteventsdivcontainer= .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]
 
 #Gmail
 northeastern.edu.dashboardpage.gmailportlet =.//h1[@id='mail']/../..
