--- a/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedProjectConstants/ExecutionConstants.properties
@@ -16,7 +16,7 @@ chromeExec = WebDriversPlugins/chromedriver
 #PhatomJSDriverPlugin location
 phantomjsExec = WebDriversPlugins/phantomjs
 
-##WebDriverPlugins for Mac
+##WebDriverPlugins for Windows
 #ChromeDriverPlugin location
 chromeExecWin = WebDriversPlugins/chromedriver.exe
 #PhatomJSDriverPlugin location
