Resolved issues with RecentLinks and Quicklinks test cases

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -11,10 +11,16 @@ northeastern.edu.signinpage.sigin_link = .//a[contains(text(),'Sign In')]
 northeastern.edu.homepage.appsandlinkslink= .//div[@class='nav-content']/ul/li/a/span[contains(text(),'Apps & Links')]/..
 
 #Right Panel
-northeastern.edu.appsandlinkspage.recentlinkslistul= .//div[@class='my-recent-links-widget']/div[@class='list']/ul
-northeastern.edu.appsandlinkspage.quicklinkslistul= .//div[@class='my-links-widget']/div[@class='list']/ul
-northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-links-widget']/div/ul/div[@class='links-row']/li
-northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div/ul/div[@class='links-row']/li
+northeastern.edu.appsandlinkspage.recentlinkslistul= .//div[@class='my-recent-links-widget']/div[@class='list']/ul/div[@class='links-row']
+northeastern.edu.appsandlinkspage.quicklinkslistul= .//div[@class='my-links-widget']/div[@class='list']/ul/div[@class='links-row']
+northeastern.edu.appsandlinkspage.recentlinkslist= .//div[@class='my-recent-links-widget']/div[@class='list']/ul/div[@class='links-row']/li
+northeastern.edu.appsandlinkspage.quicklinkslist= .//div[@class='my-links-widget']/div[@class='list']/ul/div[@class='links-row']/li
+
+northeastern.edu.appsandlinkspage.recentlinksappslistul= .//div[@class='my-recent-links-widget']/div[@class='list']/ul/div[@class='apps-row']
+northeastern.edu.appsandlinkspage.quicklinksappslistul= .//div[@class='my-links-widget']/div[@class='list']/ul/div[@class='apps-row']
+northeastern.edu.appsandlinkspage.recentlinksappslist= .//div[@class='my-recent-links-widget']/div[@class='list']/ul/div[@class='apps-row']/li
+northeastern.edu.appsandlinkspage.quicklinksappslist= .//div[@class='my-links-widget']/div[@class='list']/ul/div[@class='apps-row']/li
+
 northeastern.edu.appsandlinkspage.profilemanagementcontainer= .//div[@class='profile-management']
 northeastern.edu.appsandlinkspage.profilemanagementLink = .//div[@class='profile-management']/div/div/a[contains(@class,'change-logo')]
 northeastern.edu.appsandlinkspage.profilemanagementpopuptitle=.//div[@id='_com_neu_portlet_NeuProfileManagementPortlet_changeLogo']/div/div[contains(@class,'modal-header')]/h3
@@ -74,9 +80,9 @@ northeastern.edu.dashboardpage.addtomyapps.modalxbutton = .//h1[contains(text(),
 
 #Latest News
 northeastern.edu.dashboardpage.latestnewsportlet = .//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']
-northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
-northeastern.edu.dashboardpage.latestnewsdivlistitems=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
-northeastern.edu.dashboardpage.latestnewsdivcontainer=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'news-body')]
+northeastern.edu.dashboardpage.latestnews.vewAllNewsLink = .//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]/div[contains(@class,'ft')]/a
+northeastern.edu.dashboardpage.latestnewsdivlistitems=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]/div[contains(@class,'news-card')]
+northeastern.edu.dashboardpage.latestnewsdivcontainer=.//h1[contains(text(),'Latest News')]/../../../div[@class='news cards-container']/div[contains(@class,'container-body')]/div[contains(@class,'news-body')]
 
 #Latest Events
 northeastern.edu.dashboardpage.latesteventsportlet = .//h1[contains(text(),'Latest Events')]/../../../div[@class='news cards-container']
