Resolved issues with Gmail portlet test cases

--- a/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
+++ b/Automation/northeasternuniversity.cxplatform/SharedMapUIElements/SharedUIElements.properties
@@ -94,6 +94,9 @@ northeastern.edu.dashboardpage.latesteventsdivcontainer= .//h1[contains(text(),'
 northeastern.edu.dashboardpage.gmailportlet =.//h1[@id='mail']/../..
 northeastern.edu.dashboardpage.gmail.authorizebutton = .//a[@id='authorize-button']
 northeastern.edu.dashboardpage.gmail.authorizepage.northeasternlink = .//*[@id='headingSubtext']/a
+northeastern.edu.dashboardpage.gmail.authorizepage.developerinfodiv = .//div[@id='oauthThirdPartyInfoDialog']
+northeastern.edu.dashboardpage.gmail.authorizepage.developerinfodiv.description = .//div[@id='oauthThirdPartyInfoDialog']/div/div/p[2]
+northeastern.edu.dashboardpage.gmail.authorizepage.developerinfo.closelink = .//div[@id='oauthThirdPartyInfoDialog-close']
 northeastern.edu.dashboardpage.gmail.authorizepage.northeasternidentifierinput = .//*[@id='identifierId']
 northeastern.edu.dashboardpage.gmail.authorizepage.northeasternnextbutton = .//div[@id='identifierNext']
 
